--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-from-markdown": "^16.0.0",
     "@contentful/rich-text-react-renderer": "^15.17.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.4",
